--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Standards-Version: 3.8.4
 Homepage: http://geonode.org/
 
 Package: geonode
-Architecture: any
+Architecture: all
 Depends: debconf, python, python-dev, sun-java6-jre | openjdk-6-jre, tomcat6, postgresql-8.4, gcc, patch, zip, virtualenvwrapper, python-imaging, python-reportlab, gdal-bin, libgeos-dev, python-urlgrabber, python-virtualenv, python-pastescript, gettext, postgresql-contrib, libpq-dev, unzip, libjpeg-dev, libpng-dev, python-gdal, libproj-dev, python-psycopg2, apache2, libapache2-mod-wsgi, ${misc:Depends}
 #,${shlibs:Depends}
 Description: Allows the creation, sharing, and collaborative use of geospatial data. 
