Removed batch command that is not needed anymore

--- a/debian/rules
+++ b/debian/rules
@@ -45,7 +45,7 @@ install:
 	mkdir -p $(CURDIR)/debian/geonode/usr/share/geonode
 	cp ${CURDIR}/debian/patches/patch.geoserver $(CURDIR)/debian/geonode/usr/share/geonode/
 	cp ${CURDIR}/debian/patches/patch.geonetwork $(CURDIR)/debian/geonode/usr/share/geonode/
-	cp ${CURDIR}/debian/patches/geonode.admin $(CURDIR)/debian/geonode/usr/share/geonode/admin.json
+	cp ${CURDIR}/debian/support/geonode.admin $(CURDIR)/debian/geonode/usr/share/geonode/admin.json
 	cp ${CURDIR}/debian/support/create_template_postgis-debian.sh $(CURDIR)/debian/geonode/usr/share/geonode/
 binary-indep: build install
 
