--- a/debian/rules
+++ b/debian/rules
@@ -43,6 +43,8 @@ install:
 	cp -rp $(CURDIR)/debian/support/geonode.binary $(CURDIR)/debian/geonode/usr/bin/geonode
 	# Last step is to copy the scripts and patches that would be used in postinst	
 	mkdir -p $(CURDIR)/debian/geonode/usr/share/geonode
+	mkdir -p $(CURDIR)/debian/geonode/etc/geoserver
+	mkdir -p $(CURDIR)/debian/geonode/etc/geonetwork
 	cp ${CURDIR}/debian/geoserver/web.xml $(CURDIR)/debian/geonode/etc/geoserver/
 	cp ${CURDIR}/debian/geonetwork/config.xml $(CURDIR)/debian/geonode/etc/geonetwork/
 	cp ${CURDIR}/debian/support/geonode.admin $(CURDIR)/debian/geonode/usr/share/geonode/admin.json
