--- a/debian/rules
+++ b/debian/rules
@@ -43,12 +43,11 @@ install:
 	cp -rp $(CURDIR)/debian/support/geonode.binary $(CURDIR)/debian/geonode/usr/bin/geonode
 	# Last step is to copy the scripts and patches that would be used in postinst	
 	mkdir -p $(CURDIR)/debian/geonode/usr/share/geonode
-	mkdir -p $(CURDIR)/debian/geonode/etc/geoserver
 	mkdir -p $(CURDIR)/debian/geonode/etc/geonetwork
-	cp ${CURDIR}/debian/geoserver/web.xml $(CURDIR)/debian/geonode/etc/geoserver/
-	cp ${CURDIR}/debian/geonetwork/config.xml $(CURDIR)/debian/geonode/etc/geonetwork/
-	cp ${CURDIR}/debian/support/geonode.admin $(CURDIR)/debian/geonode/usr/share/geonode/admin.json
-	cp ${CURDIR}/debian/support/create_template_postgis-debian.sh $(CURDIR)/debian/geonode/usr/share/geonode/
+	cp -rp ${CURDIR}/debian/geoserver/web.xml $(CURDIR)/debian/geonode/var/lib/tomcat6/webapps/geoserver/WEB-INF/web.xml
+	cp -rp ${CURDIR}/debian/geonetwork/config.xml $(CURDIR)/debian/geonode/etc/geonetwork/
+	cp -rp ${CURDIR}/debian/support/geonode.admin $(CURDIR)/debian/geonode/usr/share/geonode/admin.json
+	cp -rp ${CURDIR}/debian/support/create_template_postgis-debian.sh $(CURDIR)/debian/geonode/usr/share/geonode/
 binary-indep: build install
 
 binary-arch: build install
